# BI

./: 201611230847048128.7z  Access sample.7z  README.md  SQL tools.7z  access sample.7z
AUD/: ICP.MD  README.md  check_server.ps1  docker-compose.yml  iams_dev.db  pyproject.toml  requirements.txt  start_dev.bat  start_dev.ps1
AUD/app/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
AUD/app/routers/: __init__.py  announcements.py  audit_plans.py  audit_records.py  auth.py  corrective_actions.py  questions.py  reports.py
AUD/app/static/: index.html
AUD/app/static/css/: styles.css
AUD/app/static/js/: app.js  ui.js
GetData_API/: README.md  api_tool.py  db.py  excel_loader.py
GetData_API/GetData_API/: UI_API.MD  api_tool.db  main.py  requirements.txt
PRJ1/: DEPLOYMENT.md  __init__.py  announcement_data.py  app.py  audit_log_data.py  check_users.py  control_data.py  dashboard_data.py  database.py  evidence_data.py  icp_system.db  issue_data.py  notification_data.py  pyproject.toml  requirements.txt  resource_data.py  seed_data.py  start_production.ps1  start_production.sh  test_login.py  test_login.sh  user_data.py  wsgi.py
PRJ1/prj1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
